# university-labs

./: .gitignore  README.md
artificial-intelligence/lab1/: .gitignore  __init__.py  knowledge_base.py  rules.json  values.json
cryptography-and-data-security/vigenere_and_kasiski/: __init__.py  encryptor.py  hasher.py  rus_text.txt  shiftable_string.py  text.txt  vigenere_and_kasiski.html  vigenere_and_kasiski.ipynb  vigenere_hacker.py
image_processing/lab1/: KukulianskiLab1.ipynb
image_processing/lab2/: KukulianskiLab2.ipynb
image_processing/lab3/: KukulianskiLab3.ipynb
image_processing/lab4/: KukulianskiLab4.ipynb
image_processing/report/: PCA.ipynb
pdc/lab1/: CMakeLists.txt  Untitled.ipynb  main.cpp
pdc/lab2/: CMakeLists.txt  main.cpp
stat-modeling/lab1/: __init__.py  distributions.py
